# pr-4-llm

./: .gitignore  README.md  pyproject.toml
configs/generation/creative/: llama13b-chat.yaml  llama13b.yaml  llama70b-chat.yaml  llama70b.yaml  llama7b-chat.yaml  llama7b.yaml  mistral-chat.yaml  mistral.yaml  pythia12b.yaml  pythia6.9b.yaml  vicuna.yaml
configs/generation/webtext/: llama13b-chat.yaml  llama13b.yaml  llama70b-chat.yaml  llama70b.yaml  llama7b-chat.yaml  llama7b.yaml  mistral-chat.yaml  mistral.yaml  vicuna.yaml
configs/generation/wikipedia_bio/: llama13b-chat.yaml  llama13b_lam.yaml  llama70b-chat.yaml  llama70b.yaml  llama7b-chat.yaml  llama7b.yaml  mistral-chat.yaml  mistral.yaml  pythia12b.yaml  pythia6.9b.yaml  vicuna.yaml
pr_llm/: utils.py
pr_llm/PR/: __init__.py  compute_PR.py  utils.py
pr_llm/data/: average_tokens_per_words.py  download_ag_news.py  download_webtext.py  download_wikipedia_bio.py  make_creative_writing_dataset.py  make_icl_dataset.py
pr_llm/evaluate/: __init__.py  scores.py  utils.py
pr_llm/evaluate/creative/: eval.py  mauve_pr.py
pr_llm/evaluate/webtext/: eval.py  mauve_pr.py
pr_llm/evaluate/wikipedia_bio/: eval.py  mauve_pr.py
pr_llm/generation/: creative_launcher.py  evaluation.py  generate_distributed.py  preprocessing.py  utils.py  webtext_launcher.py  wikipedia_bio_launcher.py
pr_llm/mauve/: __init__.py  compute_mauve.py  utils.py
